# Catnip

./: CMakeLists.txt  README.md  Tritar_Thalia_GP2_Exam_2425.pptx  VulkanTutorialProject.sln  VulkanTutorialProject.vcxproj  VulkanTutorialProject.vcxproj.filters  main.cpp  shader.vert
resources/: Low.fbx  rat.fbx
shaders/: blit.frag  compile.bat  cube.vert  depth.vert  forward.frag  forward.vert  frag.spv  geometry.frag  geometry.vert  ibl.frag  lighting.frag  lighting.vert  lighting_helpers.glsl  shader.frag  shader.vert  shadow.vert  sky.frag  tm_helpers.glsl  triangle.vert  vert.spv  volumetric.frag  volumetric_helpers.glsl
shaders/compiled_shaders/: blit.frag.spv  cube.vert.spv  depth.vert.spv  forward.frag.spv  forward.vert.spv  geometry.frag.spv  geometry.vert.spv  ibl.frag.spv  lighting.frag.spv  shader.frag.spv  shader.vert.spv  shadow.vert.spv  sky.frag.spv  triangle.vert.spv  volumetric.frag.spv
src/: Structs.h  main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Singleton.h  Window.cpp  Window.h
src/utils/: KeyInput.h
src/vulkan/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  GeometryPass.cpp  Image.cpp  Image.h  Instance.cpp  Instance.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Scene.cpp  Scene.h  SwapChain.cpp  SwapChain.h  UniformBuffer.cpp  UniformBuffer.h  Utils.h
src/vulkan/buffers/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  StorageBuffer.h  UniformBuffer.cpp  UniformBuffer.h
src/vulkan/passes/: BlitPass.cpp  BlitPass.h  DepthPrepass.cpp  DepthPrepass.h  ForwardPass.cpp  ForwardPass.h  GeometryPass.cpp  GeometryPass.h  LightingPass.cpp  LightingPass.h  ShadowPass.cpp  ShadowPass.h  VolumetricPass.cpp  VolumetricPass.h
src/vulkan/scene/: Camera.cpp  Camera.h  HDRImage.cpp  HDRImage.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h
src/vulkan/utils/: DebugLabel.cpp  DebugLabel.h  PerformanceTimer.cpp  PerformanceTimer.h
